--- a/PeneiraClubeProjeto/index.html
+++ b/PeneiraClubeProjeto/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    
     <script type="text/javascript" src="js/script.js"></script>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="shortcut icon" type="imagex/png" href="./img/icone.png">
     <title>ADS Futebol Clube</title>
 </head>
@@ -25,12 +26,7 @@
 			<li><a href="form.html">INSCREVA-SE</a></li>
 		</ul>
     </header>
-    <br/> 
-    <br/>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
+
     <body>
         <br/><br/>
         <!-- services -->
@@ -43,28 +39,30 @@
                     </div>
                     <div class="row text-center">
                         <div class="col-md-4">
-                            <span class="fa-stack fa-4x">
+                            <!-- <span class="fa-stack fa-4x">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                            </span>
-                            <h4 class="my-3">E-Commerce</h4>
+                            </span> -->
+                            <img src="img/falta.png" alt="" srcset="">
+                            <h4 class="my-3">Faltas</h4>
                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                         </div>
                         <div class="col-md-4">
-                            <span class="fa-stack fa-4x">
+                            <!-- <span class="fa-stack fa-4x">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fas fa-star fa-stack-1x fa-inverse"></i>
-                            </span>
-                            <h4 class="my-3">Títulos</h4>
+                            </span> -->
+                            <img src="img/estrela.png" alt="" srcset="">
+                            <h4 class="my-3">Estrelas da temporada</h4>
                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                         </div>
                         <div class="col-md-4">
-                            <span class="fa-stack fa-4x">
+                            <!-- <span class="fa-stack fa-4x">
                                 <i class="fas fa-circle fa-stack-2x " ></i>
                                 <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-                                
-                            </span>
-                            <h4 class="my-3">Web Security</h4>
+                            </span> -->
+                            <img src="img/trofeu.png" alt="" srcset="">
+                            <h4 class="my-3">Titulos</h4>
                             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                         </div>
                     </div>
@@ -95,9 +93,9 @@
                             <!-- Portfolio item 1-->
                             <div class="portfolio-item">
                                 <a class="portfolio-link" data-bs-toggle="modal" href="n">
-                                    <div class="portfolio-hover">
+                                    <!-- <div class="portfolio-hover">
                                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                    </div>
+                                    </div> -->
                                     <img class="img-fluid" src="img/jogador1.jpg" alt="..." />
                                 </a>
                                 <div class="portfolio-caption">
@@ -110,9 +108,9 @@
                             <!-- Portfolio item 2-->
                             <div class="portfolio-item">
                                 <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                                    <div class="portfolio-hover">
+                                    <!-- <div class="portfolio-hover">
                                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                    </div>
+                                    </div> -->
                                     <img class="img-fluid" src="img/jogador2.jpg" alt="..." />
                                 </a>
                                 <div class="portfolio-caption">
@@ -125,9 +123,9 @@
                             <!-- Portfolio item 3-->
                             <div class="portfolio-item">
                                 <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
-                                    <div class="portfolio-hover">
+                                    <!-- <div class="portfolio-hover">
                                         <div class="portfolio-hover-content"><p>Algo sobre o jogador</p></div>
-                                    </div>
+                                    </div> -->
                                     <img class="img-fluid" src="img/jogador3.jpg" alt="..." />
                                 </a>
                                 <div class="portfolio-caption">
@@ -140,9 +138,9 @@
                             <!-- Portfolio item 4-->
                             <div class="portfolio-item">
                                 <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                                    <div class="portfolio-hover">
+                                    <!-- <div class="portfolio-hover">
                                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                    </div>
+                                    </div> -->
                                     <img class="img-fluid" src="img/jogador4.jpg" alt="..." />
                                 </a>
                                 <div class="portfolio-caption">
@@ -155,9 +153,9 @@
                             <!-- Portfolio item 5-->
                             <div class="portfolio-item">
                                 <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
-                                    <div class="portfolio-hover">
+                                    <!-- <div class="portfolio-hover">
                                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                    </div>
+                                    </div> -->
                                     <img class="img-fluid" src="img/jogador5.jpg" alt="..." />
                                 </a>
                                 <div class="portfolio-caption">
@@ -170,9 +168,9 @@
                             <!-- Portfolio item 6-->
                             <div class="portfolio-item">
                                 <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
-                                    <div class="portfolio-hover">
+                                    <!-- <div class="portfolio-hover">
                                         <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                    </div>
+                                    </div> -->
                                     <img class="img-fluid" src="img/jogador6.jpg" alt="..." />
                                 </a>
                                 <div class="portfolio-caption">
